--- a/dashboard/templates/navbar.html
+++ b/dashboard/templates/navbar.html
@@ -12,8 +12,8 @@
     <ul class="navlinks">
         <li><a href="{% url 'dashboard' %}">Home</a></li>
         <li><a href="{% url 'errorpage' %}">404 Page</a></li>
-        <li><a href="#">About</a></li>
-        <li><a href="#">Contact</a></li>
+        <li><a href="{% url 'aboutus' %}">About</a></li>
+        <li><a href="{% url 'contactus' %}">Contact</a></li>
         <li><a href="{% url 'acquireservice' %}">Service Marketplace</a></li>
         <li><a href="{% url 'workoffer' %}">Work Offer</a></li>
         <li><a href="{% url 'login' %}">Login</a></li>
