--- a/dashboard/templates/index.html
+++ b/dashboard/templates/index.html
@@ -19,6 +19,8 @@
     <link rel="stylesheet" href="{% static 'css/includes/acquireservice2.css' %}">
     <link rel="stylesheet" href="{% static 'css/includes/workoffer.css' %}">
     <link rel="stylesheet" href="{% static 'css/includes/workoffer2.css' %}">
+    <link rel="stylesheet" href="{% static 'css/includes/contactus.css' %}">
+    <link rel="stylesheet" href="{% static 'css/includes/aboutus.css' %}">
 
 </head>
 
