--- a/dashboard/templates/includes/aboutus.html
+++ b/dashboard/templates/includes/aboutus.html
@@ -30,7 +30,7 @@
         semper. Amet, eu, consequat blandit lacus dolor.<br>
         Imperdiet sed magna ultrices at id. Senectus <br>
         pellentesque semper pulvinar massa nunc<br>
-        ultrices mi.
+        ultrices mi.</p>
     </div>
     <div class="aboutus-img">
         <div class="aboutus-img-container">
